Harmoniserer hvilke perioder vi ser på ved kompletthet og im for beregning